fix: if the conversation name is too long, it will overflow the current item. #607 (#972)
### What problem does this PR solve?

fix: if the conversation name is too long, it will overflow the current
item. #607

### Type of change

- [x] Bug Fix (non-breaking change which fixes an issue)

--- a/web/src/pages/chat/index.less
+++ b/web/src/pages/chat/index.less
@@ -8,6 +8,7 @@
 
     .chatAppContent {
       overflow-y: auto;
+      width: 100%;
     }
 
     .chatAppCard {
